--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,36 +3,29 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8"/>
-<title>Product Manager</title>
+<title>User Manager</title>
 </head>
 <body>
 
 <div align="center">
-    <h1>Product List</h1>
-        <a href="/new">Create New Product</a>
+    <h1>User List</h1>
+        <a href="/new">Create New User</a>
     <br/><br/>
     <table border="1" cellpadding="10">
         <thead>
             <tr>
-                <th>Product ID</th>
+                <th>User ID</th>
                 <th>Name</th>
-                <th>Brand</th>
-                <th>Made In</th>
-                <th>Price</th>
-                <th >Actions</th>
+                <th>Surname</th>
             </tr>
         </thead>
         <tbody>
-            <tr th:each="product : ${listProducts}">
-            	<td th:text="${product.id}">Product ID</td>
-                <td th:text="${product.name}">Name</td>
-                <td th:text="${product.brand}">Brand</td>
-                <td th:text="${product.madein}">Made in</td>
-                <td th:text="${product.price}">Price</td>
+            <tr th:each="user : ${listUsers}">
+            	<td th:text="${user.id}">User ID</td>
+                <td th:text="${user.name}">Name</td>
+                <td th:text="${user.surname}">Surname</td>
                 <td >
-                	<a th:href="@{'/edit/' + ${product.id}}">Edit</a>
-                	&nbsp;&nbsp;&nbsp;
-                	<a th:href="@{'/delete/' + ${product.id}}">Delete</a>
+                	<a th:href="@{'/edit/' + ${user.id}}">Edit</a>
                 </td>
 
             </tr>
