--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,6 @@
 
 <div align="center">
     <h1>User List</h1>
-        <a href="/new">Create New User</a>
     <br/><br/>
     <table border="1" cellpadding="10">
         <thead>
@@ -24,6 +23,9 @@
             	<td th:text="${user.id}">User ID</td>
                 <td th:text="${user.name}">Name</td>
                 <td th:text="${user.surname}">Surname</td>
+                <td >
+                	<a th:href="@{'/' + ${user.id} + '/decks'}">Колоды</a>
+                </td>
                 <td >
                 	<a th:href="@{'/edit/' + ${user.id}}">Edit</a>
                 </td>
