Added cards output

--- a/src/main/resources/templates/user_decks.html
+++ b/src/main/resources/templates/user_decks.html
@@ -32,6 +32,9 @@
                 <td >
                 	<a th:href="@{'/' + ${userId} + '/decks/' + ${deck.deckId} + '/edit'}">Edit</a>
                 </td>
+                <td >
+                	<a th:href="@{'/' + ${userId} + '/decks/' + ${deck.deckId} + '/cards'}">Карточки</a>
+                </td>
 
             </tr>
         </tbody>
