--- a/src/main/resources/templates/deck_cards.html
+++ b/src/main/resources/templates/deck_cards.html
@@ -10,6 +10,8 @@
 <div align="center">
     <h1>User Deck Lists</h1>
         <a th:href="@{'/' + ${userId} + '/decks/' + ${deckId} + '/cards/new'}">Create New Card</a>
+		<br/><br/>
+        <a th:href="@{'/' + ${userId} + '/decks/' + ${deckId} + '/cards/repeat'}">Cards For Repeat</a>
     <br/><br/>
     <table border="1" cellpadding="10">
         <thead>
@@ -17,6 +19,7 @@
                 <th>First Side</th>
                 <th>Second Side</th>
                 <th>Frequency</th>
+                <th>Learning Day</th>
             </tr>
         </thead>
         <tbody>
@@ -24,6 +27,7 @@
             	<td th:text="${card.firstSide}">First Side</td>
                 <td th:text="${card.secondSide}">Second Side</td>
                 <td th:text="${card.boxNum}">Frequency</td>
+                <td th:text="${card.learningDay}">Learning Day</td>
                 <td >
                 	<a th:href="@{'/' + ${userId} + '/decks/' + ${deckId} + '/cards/' + ${card.cardId} + '/delete'}">Delete</a>
                 </td>
