--- a/src/main/resources/templates/deck_cards.html
+++ b/src/main/resources/templates/deck_cards.html
@@ -11,7 +11,9 @@
     <h1>User Deck Lists</h1>
         <a th:href="@{'/' + ${userId} + '/decks/' + ${deckId} + '/cards/new'}">Create New Card</a>
 		<br/><br/>
-        <a th:href="@{'/' + ${userId} + '/decks/' + ${deckId} + '/cards/repeat'}">Cards For Repeat</a>
+        <a th:href="@{'/' + ${userId} + '/decks/' + ${deckId} + '/cards/fsrepeat'}">Repeat On The First Side</a>
+		<br/><br/>
+        <a th:href="@{'/' + ${userId} + '/decks/' + ${deckId} + '/cards/ssrepeat'}">Repeat On The Second Side</a>
     <br/><br/>
     <table border="1" cellpadding="10">
         <thead>
